# bfjit

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  deploy.yml  pages.yml
bf/: cgbfi2.bf  hello.bf  mendelbrot.bf
book/: book.toml
book/src/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  SUMMARY.md  conclusion.md  introduction.md
docs/: 1.html  2.html  3.html  4.html  404.html  5.html  6.html  7.html  8.html  conclusion.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
src/: bfir.rs  bfjit.rs  error.rs  main.rs
