[package]
name = "bfjit"
version = "0.1.4"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/Nugine/bfjit"
description = "Brainfuck JIT VM tutorial"
keywords = ["brainfuck", "jit", "tutorial"]
categories = ["compilers", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.17"
dynasm = "3.0.1"
dynasmrt = "3.0.1"
clap = { version = "4.5.48", features = ["derive"] }

[profile.release]
debug = "full"
