[package]
name = "bfjit"
version = "0.1.4"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/Nugine/bfjit"
description = "Brainfuck JIT VM tutorial"
keywords = ["brainfuck", "jit", "tutorial"]
categories = ["compilers", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.18"
dynasm = "5.0.0"
dynasmrt = "5.0.0"
clap = { version = "4.5.60", features = ["derive"] }

[profile.release]
debug = "full"
